--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -8,9 +8,9 @@ spring.jpa.database-platform: org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation: true
 
 server:
-  port: 8081
+  port: 8080
 
-springdoc:
+spring-doc:
   api-docs.path: /api-docs
 
 spring:
