--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,13 @@
-
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.4'
 	id 'io.spring.dependency-management' version '1.1.0'
+}
+
+jar {
+	manifest {
+		attributes 'Main-Class': 'com.jumbo.trus.TrusApplication'
+	}
 }
 
 group = 'com.jumbo'
