--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,9 @@ plugins {
 
 jar {
 	manifest {
-		attributes 'Main-Class': 'com.jumbo.trus.TrusApplication'
+		attributes(
+				'Main-Class': 'com.jumbo.trus.TrusApplication'
+		)
 	}
 }
 
@@ -36,8 +38,8 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter:3.1.0'
-	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
+	implementation 'org.springframework.boot:spring-boot-starter:3.0.4'
+	implementation 'org.springframework.boot:spring-boot-starter-web:3.0.4'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.4'
 	implementation 'org.springframework.boot:spring-boot-starter-security:3.0.4'
@@ -51,7 +53,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.26'
 	annotationProcessor 'org.hibernate:hibernate-jpamodelgen:6.1.7.Final'
 	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.4'
 }
 
 tasks.named('test') {
