--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.jsoup:jsoup:1.16.2'
 	implementation 'org.springframework.boot:spring-boot-starter:3.0.4'
 	implementation 'org.springframework.boot:spring-boot-starter-web:3.0.4'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
