--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,4 +26,8 @@ notifications:
   enabled: ${NOTIFICATIONS_ENABLED:true}
 pkfl:
   trus: ${TEAM_URL:https://pkfl.cz/tym/s1128}
-  table: ${TABLE_URL:https://pkfl.cz/liga/s177/s2vse/s34?t=prubez}
+  table: ${TABLE_URL:https://pkfl.cz/liga/s179/s2vse/s37?t=prubez}
+  login_page: ${PKFL_LOGIN_PAGE:https://pkfl.cz/admin/auth/in}
+  login_mail: ${PKFL_LOGIN_MAIL}
+  login_password: ${PKFL_LOGIN_PASSWORD}
+
