--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,9 @@ bootRun {
 	systemProperties = System.properties as Map<String, ?>
 }
 
-compileJava {
-	options.compilerArgs = [
+tasks.withType(JavaCompile).configureEach {
+	options.compilerArgs += [
+			'-parameters',
 			'-Amapstruct.defaultComponentModel=spring',
 			'-Amapstruct.suppressGeneratorTimestamp=true'
 	]
@@ -44,6 +45,9 @@ dependencies {
 	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.3.Final'
 	implementation 'org.hibernate:hibernate-jpamodelgen:6.1.7.Final'
 	implementation 'org.postgresql:postgresql:42.6.0'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	compileOnly 'org.projectlombok:lombok:1.18.26'
 	compileOnly 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
